<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BabyFace</string>
    <string name="action_settings">Settings</string>
    <string name="Add_title">add</string>
    <string name="About_title">about</string>
    <string name="new_diary_dialog_baby_name">What\'s your baby\'s name?</string>
    <string name="new_diary_dialog_dob">When was he/she born?</string>
    <string name="new_diary_dialog_gender">Boy or Girl?</string>
    <string name="new_diary_dialog_pob">Where was he/she born?</string>
    <string name="new_diary_dialog_frame">Choose a frame for your baby\'s diary!</string>
    <string name="new_diary_dialog_photo">Choose your\nPrimary Photo!</string>
    <string name="new_diary_dialog_set_date_button">Set Date</string>
    <string name="title_activity_add_diary">AddDiary</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_frame_selection">Frames</string>
    <string name="title_activity_select_image">SelectImage</string>
    <string name="select_image_dialog_title">Select Profile Picture</string>

    <array name="image_source">
        <item name="select_image_camera">Take a picture</item>
        <item name="select_image_gallery">Select from gallery</item>
    </array>

    <string name="title_activity_frame">FrameActivity</string>
    <string name="frame_selection_text_view">Select a frame for your baby!</string>
    <string name="frame_selection_button">Start your baby\'s journey!</string>
    
    <string name="entry_title">Untitled</string>
    <string name="entry_description">No Description</string>
    <string name="image_details">Image Details</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the application to stop. Please help me fix this by sending us error data, all you have to do is click \'OK\'.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_notif_ticker_text">Unexpected error, please send a report...</string>
    <string name="crash_notif_title">Feather crashed...</string>
    <string name="crash_notif_text">Please click here to help fix the issue.</string>
    <string name="launch_editor">Launch Editor</string>
    <string name="choose_photo">Choose a Photo</string>
    <string name="external_storage_na_title">Attention</string>
    <string name="external_storage_na_message">sdcard is missing or currently not mounted. Cannot continue.</string>
    <string name="get_mobile_library">Get Android Library</string>
    <string name="view_documentation">View Documentation</string>
    <string name="hi_res_service_label">HI-RES Service</string>
    <string name="crash_toast_text">Ooooops! I crashed, but a report has been sent to my developer to help him fix the issue!</string>
    <string name="event_name">Event</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="add_entry_event">What happened with baby today?</string>
    <string name="add_entry_desc">Tell me more!</string>
    <string name="add_entry_add_photo">Add Photos!</string>
    <string name="view_entry">View Entry</string>
    <string name="entry_date">Date</string>
    
    <string name="add_entry_post">Post!</string>
    <string name="entry_menu_edit">Edit</string>
    <string name="entry_menu_delete">Delete</string>
    <string name="delete_event_title">Delete Event</string>
    <string name="delete_event_message">Are you sure you want to delete this event?</string>
    <string name="add_entry_gallery">Add from gallery</string>
    <string name="add_entry_camera">Take a photo!</string>
    <string name="edit_image_button">Edit this photo</string>
    <string name="edit_entry_dialog_title">Edit entry</string>
    <string name="edit_entry_dialog_message">Accept changes?</string>
 
    

</resources>
