<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_entry_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
     android:background= "@drawable/main_bg"
    tools:context=".AddEntry" >
     <TextView
        android:id="@+id/addPhotoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:textSize="15sp"
        android:text="@string/add_entry_add_photo"
         />
     
        <HorizontalScrollView
            android:id="@+id/addEntryHorizontalView"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="110dp"
            android:layout_below="@+id/from_camera_button"
            android:background="@drawable/add_multi_photo" >

        <com.babyface.MyHorizontalLayout
            android:id="@+id/mygallery"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="6dp" >
        </com.babyface.MyHorizontalLayout>
    </HorizontalScrollView>
    
    <TextView
        android:id="@+id/eventTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addEntryHorizontalView"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:text="@string/add_entry_event" />

    <EditText
        android:id="@+id/eventNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_below="@+id/eventTextView"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:inputType="text" />

    <TextView
        android:id="@+id/descTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eventNameText"
        android:layout_marginTop="20dp"
        android:text="@string/add_entry_desc"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/eventDescText"
        android:layout_width="match_parent"
        android:layout_above="@+id/postBttn"
        android:layout_below="@+id/descTextView"
        android:background="@drawable/rounded_edittext"
        android:padding="8dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="0dip"
        android:gravity="top"
        android:inputType="textMultiLine" 
        >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/postBttn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/White"
        android:text="@string/add_entry_post"
        android:background="@drawable/btn_green" />

    <Button
        android:id="@+id/from_camera_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_below="@+id/addPhotoTextView"
  		android:layout_alignLeft="@+id/addPhotoTextView"
        android:background="@drawable/btn_red"
        android:textColor="@color/White"
        android:text="@string/add_entry_camera" />

    <Button
        android:id="@+id/from_gallery_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_below="@+id/addPhotoTextView"
        android:layout_toRightOf="@+id/from_camera_button"
        android:layout_marginLeft="10dp"
        android:background="@drawable/btn_yellow"
        android:text="@string/add_entry_gallery"
        android:textColor="@color/White" />

</RelativeLayout>