<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_diary_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_diary_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddDiaryActivity" >

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/new_diary_header" />

    <Button
        android:id="@+id/confirmFrame"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/confirm_button" />

    <requestFocus />

    <TextView
        android:id="@+id/photoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/genderTextView"
        android:layout_alignLeft="@+id/header"
        android:text="@string/new_diary_dialog_photo"
        android:textColor="@color/White"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/photoTextView"
        android:layout_alignRight="@+id/header"
        android:layout_below="@+id/nameTextView"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:inputType="text|textCapWords|textPersonName"
        android:padding="5dip" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/header"
        android:layout_below="@+id/pictureImageView"
        android:layout_marginTop="16dp"
        android:text="@string/new_diary_dialog_baby_name"
        android:textColor="@color/White"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pobTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/header"
        android:layout_below="@+id/dobEditText"
        android:layout_marginTop="16dp"
        android:text="@string/new_diary_dialog_pob"
        android:textColor="@color/White"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/pobEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/header"
        android:layout_alignRight="@+id/header"
        android:layout_below="@+id/pobTextView"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:inputType="text"
        android:padding="5dip" />

    <TextView
        android:id="@+id/dobTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/header"
        android:layout_below="@+id/nameEditText"
        android:layout_marginTop="16dp"
        android:text="@string/new_diary_dialog_dob"
        android:textColor="@color/White"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dobEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/header"
        android:layout_alignRight="@+id/header"
        android:layout_below="@+id/dobTextView"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:clickable="false" 
    	android:cursorVisible="false" 
    	android:focusable="false" 
    	android:focusableInTouchMode="false"
        android:padding="5dip" />

    <ImageView
        android:id="@+id/pictureImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/photoTextView"
        android:layout_alignRight="@+id/photoTextView"
        android:layout_below="@+id/photoTextView"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="false"
        android:clickable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/add_photo_button" />

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="120dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/confirmFrame"
        android:layout_below="@+id/header"
        android:layout_marginTop="47dp"
        android:text="@string/new_diary_dialog_gender"
        android:textColor="@color/White"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/femaleButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignRight="@+id/genderTextView"
        android:layout_alignTop="@+id/maleButton"
        android:src="@drawable/femalesign" />

    <ImageButton
        android:id="@+id/maleButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/genderTextView"
        android:layout_alignTop="@+id/pictureImageView"
        android:src="@drawable/malesign" />

</RelativeLayout>