<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/photo_view_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/photo_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
     >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="234dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edit_image_button"
        >

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/entry_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="10dp"        
        android:text="@string/entry_title"
        android:typeface="sans"
        android:textStyle="bold"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />
     <TextView
        android:id="@+id/entry_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entry_title"
        android:layout_marginTop="5dp"       
        android:textStyle="bold"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/entry_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/entry_date"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/entry_date"
        android:layout_below="@+id/entry_date"
        android:layout_marginTop="21dp"
        android:padding="10dp"
        android:gravity="left"
        android:text="@string/entry_description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@drawable/add_multi_photo"
        android:typeface="sans" />

    <Button
        android:id="@+id/edit_image_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
       	android:layout_alignParentTop="true"
       	android:layout_centerHorizontal="true"
       	android:layout_marginBottom="10dp"
       	android:textColor="@color/White"
       	android:background="@drawable/btn_yellow"
        android:text="@string/edit_image_button" />
    

</RelativeLayout>